2008-10-30  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/application_map.hh, application_map.cc, index_map.cc,
	music/interval.hh, music/interval_tree.hh, music/ioutils.hh,
	ioutils.cc, music/spatial.hh, spatial.cc, music/subconnector.hh,
	subconnector.cc, music/temporal.hh, temporal.cc: New files.

	* Changes throughout to implement propagation of configuration
	information and routing of spikes.

2008-10-16  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/FIBO.hh (FIBO::buffer): Bugfix: Changed to vector of char
	instead of char*.

2008-10-14  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/port.hh, port.cc (port::is_connected): Make sure this
	method works also in the runtime phase.

2008-10-13  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Makefile.am, music/FIBO.hh, FIBO.cc, clock.cc,
	music/configuration.hh, configuration.cc, music/connector.hh,
	connector.cc, music/event_router.hh, event_router.cc,
	music/port.hh, port.cc, music/runtime.hh, runtime.cc,
	music/setup.hh, setup.cc, synchronizer.cc: A first, cheating,
	approximation of the implementation of spike communication.  Will
	be followed by cleanups and real implementation.  The present
	implementation only allows two applications with an output and
	input port respectively.  The ports have a constant width given in
	ports.hh and the sender and receiver application must have equal
	number of MPI processes.

	* music/connectivity.hh, connectivity.cc: New files.

2008-10-10  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/index_map.hh (local_index::local_index,
	local_index::local_index): New constructor.

	* music-c.h, music-c.cc (MUSIC_event_input_port_map_global_index,
	MUSIC_event_input_port_map_local_index): Replacing
	MUSIC_event_input_port_map.

	* music/port.hh (event_input_port): Added facilities to support C
	interface.

	* music/port.hh, port.cc (event_input_port::map): Take
	event_handler_global_index and event_handler_local_index instead
	of event_handler in second argument.
